# BigDataInteligenciaArtificial

./: .gitattributes  .gitignore
BigData/: benchmark.py  environment.yml  genera_datos_p2.py  p2_duckdb.sql
BigData/Airflow/: GUIA_AIRFLOW_PASOS.md  UD4_08_Laboratorio_Airflow_Basico.md  UD4_Lab_Airflow_Entrega.md
BigData/DatosConRGPD/: 01-AnonimizacionRPGD-Herramientas.md  anonimizacion_integracion.ipynb  generar_dataset_rgpd.py
BigData/Grafana/: README.md  docker-compose.yml  prometheus.yml  start_lab.bat  stop_lab.bat
BigData/Lab1/: 01-SparkLab1.md  (+2 more)
Programación/: 05_numpy_rendimiento.ipynb  05_repaso_y_ejercicios_basicos_JuanManuelVega.ipynb  08_introduccion_jax_comparativa.ipynb  10-ejercicios_numpy-tests.ipynb
Programación/CreacionDatasetPeliculas/mi_dataset_peliculas/: .env.example  README.md  pyproject.toml
Programación/CreacionDatasetPeliculas/mi_dataset_peliculas/data/: dataset_peliculas.csv
Programación/CreacionDatasetPeliculas/mi_dataset_peliculas/src/mi_dataset_peliculas/: tmdb.py
SistemasAA/: Actividad2_14_JuanManuelVega.ipynb  Actividad2_16_JuanManuelVega.ipynb  Actividad3_9.ipynb  Actividad_2_19_JuanManuelVega.ipynb  Actividad_2_20_JuanManuelVega.ipynb  Actividad_4_1_JuanManuelVega.ipynb  Actividad_5_1_KMeans_Benchmark_JuanManuelVega.ipynb  Actividad_regresión_Lasso_Ridge_ElasticNet_JuanManuelVega.ipynb  Distribucion_normal_ejercicios_JuanManuelVega.ipynb  EjercicioDistribuciónNormal.py  Estadistica_JuanManuelVega.ipynb  actividad_2_8_knn_regresion_iris_JuanManuelVega.ipynb  actividad_4_1_MOD_JuanManuelVega.ipynb  knn_regresion_iris.ipynb
(+348 files in other folders)
